[project]
name = "fuzzyfastq"
version = "0.1.0"
authors = [
    {name = "Michael Kaufman", email = "mlkaufman@gmail.com"},
]
description = "A bioinformatics tool for matching DNA sequences with predefined barcodes and adapters using a mismatch threshold, then visualizing the distribution of matches in FASTQ files"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.9.0",
    "regex>=2023.10.3",
    "matplotlib>=3.8.0"
]

[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
fuzzyfastq = "fuzzyfastq.fuzzyfastq:app"